--- a/workflow/notebooks/analyze-genomic-coverage.Rmd
+++ b/workflow/notebooks/analyze-genomic-coverage.Rmd
@@ -72,7 +72,6 @@ figures.dir = "../../results/figures/"
 
 ```
 
-
 ## Read Depth
 
 What's the general pattern of read depth across all samples before trimming primer sequences? We sequenced samples in two rounds. I'll break the samples into these separate rounds to see if there is anything different. 
@@ -91,7 +90,7 @@ round.2.runs = filter(sample.metadata.df, Sequencing_Round == 2)$Run
 
 How does the depth look for all samples before trimming the primers? I'm splitting up the first and second sequencing runs in case there are obvious differences. I capped the maximum depth per position at 100,000 reads. I'll plot this on a log scale. 
 
-```{r Untrimmed Depth, echo=T, fig.align='center', fig.width=8, fig.height=6}
+```{r Untrimmed Depth, fig.align='center', fig.width=12, fig.height=10}
 
 untrimmed.depth.df %>% 
   mutate(Round = case_when(
@@ -107,7 +106,7 @@ untrimmed.depth.df %>%
     theme_bw(18) + 
     theme(plot.title = element_text(hjust = 0.5))
 
-ggsave(paste(figures.dir, "untrimmed_read_depth.png", sep=""), width = 8, height = 6)
+ggsave(paste(figures.dir, "untrimmed_read_depth.png", sep=""), width = 12, height = 10)
 
 ```
 
@@ -115,7 +114,7 @@ There are two main observations to be made here. (1) There is something strange 
 
 How does trimming primer sequences change this depth pattern? I trimmed primer sequences (by soft clipping primers in reads) using [iVar](https://andersen-lab.github.io/ivar/html/manualpage.html). 
 
-```{r Trimmed Depth, echo=T, fig.align='center', fig.width=8, fig.height=6}
+```{r Trimmed Depth, fig.align='center', fig.width=12, fig.height=10}
 
 trimmed.depth.df %>% 
   mutate(Round = case_when(
@@ -161,7 +160,7 @@ trimmed.coverage.df = trimmed.depth.df %>%
 
 Theoretically, coverage should be a function of the number of templates being sequenced. As a proxy of this, I'll plot the percentage of the genome covered by `r min.depth` reads or more. A possible threshold for whether or not to include runs in the downstream variant calling is `r paste(min.frac, "% >= ", min.depth, "X coverage", sep="")`. I'll draw this on the chart as well. 
 
-```{r TCID50 v. Coverage, echo=TRUE, warning=FALSE, fig.align='center', fig.width = 4, fig.height = 4}
+```{r TCID50 v. Coverage, warning=FALSE, fig.align='center', fig.width = 4, fig.height = 4}
 
 trimmed.coverage.df %>% 
   ggplot(aes(x = Coverage, y = TCID50, col = as_factor(Sequencing_Round))) + 
@@ -179,7 +178,7 @@ ggsave(paste(figures.dir, "trimmed_coverage_v_TCID50.png", sep=""), width = 4, h
 
 Below, I've also plotted percent genomic coverage by the RNA copy number. 
 
-```{r RNA Copies v. Coverage, echo=TRUE, warning=FALSE, fig.align='center', fig.align='center', fig.width = 4, fig.height = 4}
+```{r RNA Copies v. Coverage, warning=FALSE, fig.align='center', fig.align='center', fig.width = 4, fig.height = 4}
 
 trimmed.coverage.df %>% 
   ggplot(aes(x = Coverage, y = RNA_Copies, col = as_factor(Sequencing_Round))) + 
@@ -197,7 +196,7 @@ ggsave(paste(figures.dir, "trimmed_coverage_v_RNA_Copies.png", sep=""), width = 
 
 Both of these plots show effectively the same thing. There are about `r length(filter(trimmed.coverage.df, Coverage >= 80))` runs that would fail a coverage requirement of `r paste(min.frac, "% >= ", min.depth, "X coverage", sep="")`. What are these samples? 
 
-```{r Coverage Fail by DPI, echo=TRUE, warning=FALSE, fig.align='center', fig.align='center', fig.width = 4, fig.height = 4}
+```{r Coverage Fail by DPI, warning=FALSE, fig.align='center', fig.align='center', fig.width = 4, fig.height = 4}
 
 trimmed.coverage.df %>% 
   mutate(Fail = if_else(Coverage < min.frac, "Low Coverage", "Acceptable Coverage")) %>% 
